# checkers-engine

./: .gitmodules  CMakeLists.txt  checkers.md  implementations-github.txt  implementations_github.txt  refs.txt  text.md  text_notes.md  three_move_opening_list_filtered_raw.txt
engine/: CMakeLists.txt  protocol.md  three_move_opening_list.txt  three_move_opening_list_filtered_raw.txt  three_move_opening_list_filtered_raw2.txt
engine/checkers_engine/: CMakeLists.txt
engine/checkers_engine/src/: array.hpp  book.cpp  book.hpp  commands.cpp  commands.hpp  engine.cpp  engine.hpp  error.hpp  evaluation.cpp  evaluation.hpp  game.cpp  game.hpp  input_tokens.hpp  loop.cpp  loop.hpp  main.cpp  messages.cpp  messages.hpp  moves.cpp  moves.hpp  opening.cpp  opening.hpp  parameters.hpp  search.cpp  search.hpp  search_node.cpp  search_node.hpp  transposition_table.cpp  transposition_table.hpp  uint128t.hpp  utils.hpp  zobrist.cpp  zobrist.hpp
engine/src/: commands.cpp  commands.hpp  engine.cpp  engine.hpp  error.hpp  evaluation.cpp  evaluation.hpp  game.cpp  game.hpp  io.cpp  io.hpp  loop.cpp  loop.hpp  main.cpp  messages.cpp  messages.hpp  moves.cpp  moves.hpp  protocol.md  search.cpp  search.hpp  search_node.cpp  search_node.hpp
engine/tests/: CMakeLists.txt  move_generation.cpp  move_generation_speed.cpp
engine/tests/src/: move_generation.cpp  move_generation_perf.cpp  move_generation_speed.cpp  search_cache.cpp  search_perf.cpp
gui/: .gitignore  CMakeLists.txt  Comparator.py  Player.py  Replayer.py  average_bf.sh  book  gen_156_pos.py  gen_book.py  gen_pos.py  requirements.txt  test_game.json
gui/common/: CMakeLists.txt  base_main_window.py  board.py  checkers_engine.py  common.py  saved_game.py
gui/common/include/: board.hpp
gui/common/include/common/: board.hpp  engine.hpp  fen_string.hpp  game_state.hpp  moves_log.hpp  parameters.hpp  subprocess.hpp  wood_click.hpp  wx.hpp
gui/common/src/: board.cpp  engine.cpp  fen_string.cpp  game_state.cpp  moves_log.cpp  parameters.cpp  subprocess.cpp  wood_click.hpp
gui/comparator/: comparator.py  data.py  engine_control.py  engine_setup.py  error.py  print.py
gui/matches/: single_match.json
gui/player/: CMakeLists.txt  Player.py  board.py  fen_string_window.py  main_window.py  mypy.ini  saved_data.py
gui/player/src/: application.cpp  application.hpp  board.cpp  board.hpp  board.py  checkers_engine.py  engine.cpp  engine.hpp  fen_string_dialog.cpp  fen_string_dialog.hpp  main.cpp  main.py  main_window.cpp  main_window.hpp  main_window.py  process.py  subprocess.cpp  subprocess.hpp
gui/replayer/: main_window.py
gui/tester/: CMakeLists.txt
gui/tester/src/: board.cpp  board.hpp  controls.cpp  controls.hpp  main.cpp  main_window.cpp  main_window.hpp  window.cpp  window.hpp
gui_old/: CMakeLists.txt
gui_old/common/include/common/: engine.hpp  fen_string.hpp  moves_log.hpp  subprocess.hpp  wx.hpp
gui_old/common/src/: board.cpp  engine.cpp  fen_string.cpp  game_state.cpp  moves_log.cpp
gui_old/player/: CMakeLists.txt
gui_old/player/src/: main_window.hpp
scripts/: player.sh  run.sh  run_tester.sh  test.sh  test_callgrind.sh  test_perf_stat.sh  tester.sh
tests/engines/0.0/: checkers-engine  info.txt
tests/engines/1.0/: checkers-engine  info.txt
tests/engines/10.0/: checkers-engine  info.txt
tests/engines/11.0/: checkers-engine  info.txt
tests/engines/11.1/: checkers-engine  info.txt
tests/engines/12.0/: checkers-engine  info.txt
tests/engines/12.1/: checkers-engine  info.txt
tests/engines/12.2/: checkers-engine  info.txt
tests/engines/13.0/: checkers-engine  info.txt
tests/engines/14.0/: checkers-engine  info.txt
tests/engines/15.0/: checkers-engine  info.txt
tests/engines/16.0/: checkers-engine  info.txt
tests/engines/17.0/: checkers-engine  info.txt
tests/engines/2.0/: checkers-engine  info.txt
tests/engines/3.0/: checkers-engine  info.txt
tests/engines/4.0/: checkers-engine  info.txt
tests/engines/5.0/: checkers-engine  info.txt
tests/engines/6.0/: checkers-engine  info.txt
tests/engines/6.1/: checkers-engine  info.txt
tests/match_files/: 156.json  156_v11.1.json  156_v2_v3.json  156_v3.json  25_v11.1.json  few_questionable.json  initial.json  initial_v11.1.json  initial_v3.json  single_start_pos.json
tests/replays/: replay--Dec-3--00-58-43--2024--match-0.json  replay--Dec-3--00-58-43--2024--match-4.json  replay--Dec-3--00-58-43--2024--rematch-0.json  replay--Nov-27--21-54-49--2024--match-0.json  replay--Sat-Nov-16--15-54-25--2024  replay--Thu-Nov-21--23-59-18--2024.json
tests/results/: commentary.md  match--Dec-11--14-06-34--2024.json  match--Dec-11--17-43-22--2024.json  match--Dec-12--00-43-24--2024.json  match--Dec-12--19-12-14--2024.json  match--Dec-13--17-35-24--2024.json  match--Dec-14--10-58-03--2024.json  match--Dec-14--14-24-16--2024.json  match--Dec-17--15-23-20--2024.json  match--Dec-2--13-34-17--2024.json  match--Dec-2--21-29-33--2024.json  match--Dec-3--00-58-43--2024.json  match--Dec-3--16-26-03--2024.json  match--Dec-3--23-59-43--2024.json  match--Dec-4--15-30-30--2024.json  match--Dec-4--18-13-45--2024.json  match--Dec-4--20-47-18--2024.json  match--Dec-5--15-19-07--2024.json  match--Dec-6--16-49-38--2024.json  match--Dec-9--00-30-46--2024.json  match--Fri-Nov-22--00-16-52--2024.json  match--Fri-Nov-22--17-17-01--2024.json  match--Nov-27--21-54-49--2024.json  match--Nov-28--13-22-46--2024.json  match--Nov-29--12-17-36--2024.json  match--Nov-30--22-55-20--2024.json  report-multiple-matches--Sat-Nov-16--15-55-20--2024.json  report-multiple-rounds-match--Wed-Nov-20--17-05-14--2024.json  report-multiple-rounds-match--Wed-Nov-20--18-17-49--2024.json  report-single-match--Sat-Nov-16--15-54-25--2024.json  report-single-round-match--Wed-Nov-20--17-05-07--2024.json  report-single-round-match--Wed-Nov-20--18-17-33--2024.json  report_multiple_matches Tue Nov 12 16:40:06 2024.json  report_single_match Fri Nov  8 12:43:47 2024.json
tests/version_11/: move-generation-perf-current.txt  move-generation-perf-old.txt  search-perf-old.txt  size-current.txt
(+24 files in other folders)
